--- a/mobile/RackApp/src/app/pages/startup/startup.page.html
+++ b/mobile/RackApp/src/app/pages/startup/startup.page.html
@@ -2,9 +2,9 @@
   <br>
   <br>
   <br>
-  <p class="line-1">What's in your closet?</p><br>
+  <div class="container"><p class="line-1 strikethrough">What's in your closet?</p></div><br>
   <br>
-  <p>Whats on your...</p>
+  <p class="typed2">Whats on your...</p>
   <img src="assets/icon/rack-logo-1.svg" alt="" class="mx-auto d-block">
   <br>
   <br>
