--- a/mobile/RackApp/src/app/tab1/tab1.page.html
+++ b/mobile/RackApp/src/app/tab1/tab1.page.html
@@ -8,14 +8,47 @@
   <br>
   <ion-grid>
     <ion-row>
+      <ion-col>
+
+        <ion-card *ngIf="currentWeather">
+          <ion-card-header *ngFor="let weather of currentWeather.weather ">
+            <ion-card-subtitle> {{ currentWeather.name }} <ion-icon name="navigate"></ion-icon></ion-card-subtitle>
+            <ion-card-title color="primary" class="py-3">{{ currentWeather.main.temp | number : '1.0-0'}} <span
+                class="mx-0 px-0">&#176;</span> </ion-card-title>
+            <!-- <ion-button fill="clear" size="large">
+                <ion-icon name="sunny-outline" size="large" *ngIf="false"></ion-icon>
+                <ion-icon name="partly-sunny-outline" size="large" *ngIf="false"></ion-icon>
+                <ion-icon name="moon-outline" size="large" *ngIf="false"></ion-icon>
+                <ion-icon name="cloudy-outline" size="large" *ngIf="false"></ion-icon>
+                <ion-icon name="cloudy-night-outline" size="large" *ngIf="false"></ion-icon>
+                <ion-icon name="rainy-outline" size="large" *ngIf="false"></ion-icon>
+                <ion-icon name="thunderstorm-outline" size="large" *ngIf="false"></ion-icon>
+                
+          </ion-button> -->
+            <ion-card-subtitle>{{weather.description}} <ion-icon name="snow-outline"></ion-icon></ion-card-subtitle>
+            <ion-text class="fs-small"> Feels like <ion-text color="primary">{{currentWeather.main.feels_like | number :
+                '1.0-0'}} <span class="mx-0 px-0">&#176;</span></ion-text> </ion-text>
+          </ion-card-header>
+        </ion-card>
+      </ion-col>
+      <ion-col>
+        <ion-card (click)="stats()" type="button">
+          <ion-card-header>
+            <div class="p-4">
+                <ion-icon name="bar-chart-outline" color="primary" class="icon-lg"></ion-icon>
+            </div>
+            <ion-card-subtitle>Rack Stats</ion-card-subtitle>
+          </ion-card-header>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+    <!-- <ion-row>
       <ion-col></ion-col>
       <ion-col size="6">
         <br>
           <ion-card (click)="stats()">
             <ion-card-header>
               <ion-button fill="clear" size="large">
-                <!-- <a routerLink=""> -->
-              <!-- <ion-icon name="bar-chart-outline" size="large"></ion-icon></a> -->
               <ion-icon name="bar-chart-outline" size="large"></ion-icon>
             </ion-button><br>
             <ion-label>Rack Stats</ion-label>
@@ -24,34 +57,37 @@
 
       </ion-col>
       <ion-col></ion-col>
-    </ion-row>
+    </ion-row> -->
     <br>
-    <br>
-    <ion-row>
-      <ion-col> Coming Soon!</ion-col>
-    </ion-row>
+    
+
     <ion-row>
       <ion-col>
         <ion-card>
           <ion-card-header>
-            <ion-button disabled fill="clear" size="large">
-                <ion-icon name="rocket-outline" size="large"></ion-icon>
-          </ion-button><br>
-          <ion-label>Discover</ion-label>
+            <div class="py-4">
+              <ion-button fill="clear" disabled>
+                <ion-icon name="rocket-outline" class="icon-lg"></ion-icon>
+              </ion-button><br>
+            </div>
+            <ion-card-subtitle>Discover*</ion-card-subtitle>
           </ion-card-header>
         </ion-card>
       </ion-col>
       <ion-col>
         <ion-card>
           <ion-card-header>
-            <ion-button disabled fill="clear" size="large">
-                <ion-icon name="heart-outline" size="large"></ion-icon>
-          </ion-button><br>
-          <ion-label>Wish Rack</ion-label>
+            <div class="py-4">
+              <ion-button fill="clear" disabled>
+                <ion-icon name="heart-outline" class="icon-lg"></ion-icon>
+              </ion-button><br>
+            </div>
+            <ion-card-subtitle>Wish Rack*</ion-card-subtitle>
           </ion-card-header>
         </ion-card>
       </ion-col>
     </ion-row>
+    <ion-text class="py-0 my-0" color="medium"><small>*Coming Soon!</small></ion-text>
   </ion-grid>
 
 </ion-content>
