--- a/mobile/RackApp/src/app/components/default-head/default-head.component.html
+++ b/mobile/RackApp/src/app/components/default-head/default-head.component.html
@@ -67,7 +67,7 @@
             <div>
               <ion-list lines="inset">
                 <ion-item><ion-icon name="language-outline"></ion-icon><ion-label>Language</ion-label><ion-text>{{user.Language}}</ion-text></ion-item>
-                <ion-item><ion-icon name="earth-outline"></ion-icon><ion-label>Region</ion-label><ion-text></ion-text></ion-item>  
+                <ion-item><ion-icon name="earth-outline"></ion-icon><ion-label>Region</ion-label><ion-text>{{user.City_id}}</ion-text></ion-item>  
               </ion-list>
               <ion-button fill="clear">Edit</ion-button>
             </div>
